--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
           >
           <ul class="nav-list list">
             <li class="nav-item">
-              <a class="nav-link curent link" href="./index.html">Studio</a
-              >
+              <a class="nav-link curent link" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link link" href="./portfolio.html">Portfolio</a
-              >
+              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link link" href="">Contacts</a>
@@ -61,7 +59,9 @@
       <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button-hero" type="button" data-modal-open>Order Service</button>
+          <button class="button-hero" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!------------------------ Section-Benefits-------------------------->
@@ -425,27 +425,38 @@
             </li>
           </ul>
         </div>
-<!--------------------------- FOOTER-MODAL ------------------------------>
+        <!--------------------------- FOOTER-FORM ------------------------------>
         <div class="footer-modal">
           <p class="footer-modal-text">Subscribe</p>
-          <input type="email" class="">
+          <form action="" class="footer-form">
+            <input
+              class="footer-form-input"
+              type="email"
+              name="user_email"
+              placeholder="E-mail"
+              required
+            />
+            <button type="submit" class="footer-form-btn">
+              Subscribe
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame-3"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
-<!-------------------------Modal window ----------------------------->
+    <!-------------------------Modal window ----------------------------->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-      <button type="button" class="modal-close-btn" data-modal-close>
-        <svg class="modal-close-btn-icon" width="8" height="8">
-          <use href="./images/icons.svg#icon-close-black"></use>
-        </svg>
-      </button> 
-
-      </button>
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
       </div>
     </div>
-<!-- script js -->
+    <!-- script js -->
     <script src="./js/modal.js"></script>
-
   </body>
 </html>
