--- a/portfolio.html
+++ b/portfolio.html
@@ -330,6 +330,26 @@
             </li>
           </ul>
         </div>
+
+        <!--------------------------- FOOTER-FORM ------------------------------>
+        <div class="footer-modal">
+          <p class="footer-modal-text">Subscribe</p>
+          <form action="" class="footer-form">
+            <input
+              class="footer-form-input"
+              type="email"
+              name="user_email"
+              placeholder="E-mail"
+              required
+            />
+            <button type="submit" class="footer-form-btn">
+              Subscribe
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
