--- a/index.html
+++ b/index.html
@@ -428,14 +428,17 @@
         <!--------------------------- FOOTER-FORM ------------------------------>
         <div class="footer-modal">
           <p class="footer-modal-text">Subscribe</p>
-          <form action="" class="footer-form">
-            <input
-              class="footer-form-input"
-              type="email"
-              name="user_email"
-              placeholder="E-mail"
-              required
-            />
+          <form class="footer-form">
+            <label for="user-email">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="user_email"
+                placeholder="E-mail"
+                required
+                id="user-email"
+              />
+            </label>
             <button type="submit" class="footer-form-btn">
               Subscribe
               <svg class="footer-btn-icon" width="24" height="24">
@@ -454,6 +457,53 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <form class="contact-form">
+          <p class="contact-form-title">
+            Leave your contacts and we will call you back
+          </p>
+          <div class="contact-form-field">
+            <label for="" class="modal-lable-text">Name</label>
+            <input
+              type="text"
+              class="contact-form-input"
+              placeholder="name"
+              name="user-name"
+            />
+            <svg class="contact-form-input-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-person-black-18dp"></use>
+            </svg>
+          </div>
+          <div class="contact-form-field">
+            <label for="" class="modal-lable-text">Phone</label>
+            <input
+              type="phone"
+              class="contact-form-input"
+              placeholder="phone"
+              name="user-phone"
+            />
+            <svg class="contact-form-input-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone-black-18dp"></use>
+            </svg>
+          </div>
+          <div class="contact-form-field">
+            <label for="" class="modal-lable-text">Email</label>
+            <input
+              type="email"
+              class="contact-form-input"
+              placeholder="email"
+              name="user-email"
+            />
+            <svg class="contact-form-input-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-email-black-18dp"></use>
+            </svg>
+          </div>
+          <textarea name="" id="" class="contact-form-textarea"></textarea>
+          <input type="checkbox" name="" id="" />
+          <p class="contact-form-accept-title">
+            I accept the terms and conditions of the Privacy Policy
+          </p>
+          <button type="submit" class="form-btn-send">Send</button>
+        </form>
       </div>
     </div>
     <!-- script js -->
