--- a/portfolio.html
+++ b/portfolio.html
@@ -335,13 +335,16 @@
         <div class="footer-modal">
           <p class="footer-modal-text">Subscribe</p>
           <form action="" class="footer-form">
-            <input
-              class="footer-form-input"
-              type="email"
-              name="user_email"
-              placeholder="E-mail"
-              required
-            />
+            <label for="user-email">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="user_email"
+                placeholder="E-mail"
+                required
+                id="user-email"
+              />
+            </label>
             <button type="submit" class="footer-form-btn">
               Subscribe
               <svg class="footer-btn-icon" width="24" height="24">
