--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
               placeholder=""
               name="user-name"
               id="user-name"
+              required
             />
             <svg class="contact-form-input-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-person-black-18dp"></use>
@@ -483,6 +484,7 @@
               placeholder=""
               name="user-phone"
               id="user-phone"
+              required
             />
             <svg class="contact-form-input-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-phone-black-18dp"></use>
@@ -496,6 +498,7 @@
               placeholder=""
               name="user-email"
               id="user-e-mail"
+              required
             />
             <svg class="contact-form-input-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-email-black-18dp"></use>
