--- a/index.html
+++ b/index.html
@@ -468,9 +468,10 @@
               type="text"
               class="contact-form-input"
               placeholder=""
-              name="user-name"
+              name="user_name"
               id="user-name"
               required
+              pattern="[а-яА-Яa-zA-Z]+"
             />
             <svg class="contact-form-input-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-person-black-18dp"></use>
@@ -482,9 +483,11 @@
               type="phone"
               class="contact-form-input"
               placeholder=""
-              name="user-phone"
+              name="user_phone"
               id="user-phone"
               required
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="000-000-00-00"
             />
             <svg class="contact-form-input-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-phone-black-18dp"></use>
@@ -496,7 +499,7 @@
               type="email"
               class="contact-form-input"
               placeholder=""
-              name="user-email"
+              name="user_email"
               id="user-e-mail"
               required
             />
@@ -509,16 +512,23 @@
             <label for="user-comment" class="modal-lable-text">Comment</label>
             <textarea
               class="contact-form-textarea"
-              name="user-comment"
+              name="user_comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
 
-          <input type="checkbox" name="" id="" />
-          <p class="contact-form-accept-title">
-            I accept the terms and conditions of the Privacy Policy
-          </p>
+          <input
+            class="contact-form-chek visually-hidden"
+            type="checkbox"
+            name="user_policy"
+            id="user-policy"
+          />
+          <label for="user-policy" class="contact-form-accept-title">
+            I accept the terms and conditions of the&nbsp
+            <a href=""> Privacy Policy</a></label
+          >
+
           <button type="submit" class="form-btn-send">Send</button>
         </form>
       </div>
