hw6 after check

--- a/index.html
+++ b/index.html
@@ -517,18 +517,20 @@
               placeholder="Text input"
             ></textarea>
           </div>
-
-          <input
-            class="contact-form-chek visually-hidden"
-            type="checkbox"
-            name="user_policy"
-            id="user-policy"
-          />
-          <label for="user-policy" class="contact-form-accept-title">
-            I accept the terms and conditions of the&nbsp
-            <a href=""> Privacy Policy</a></label
-          >
-
+          <div class="contact-form-chek-wrap">
+            <input
+              class="contact-form-chek visually-hidden"
+              type="checkbox"
+              name="user_policy"
+              id="user-policy"
+            />
+            <label for="user-policy" class="contact-form-accept-title">
+              I accept the terms and conditions of the&nbsp
+              <a href="" class="contact-form-accept-link">
+                Privacy Policy</a
+              ></label
+            >
+          </div>
           <button type="submit" class="form-btn-send">Send</button>
         </form>
       </div>
